[gd_scene load_steps=5 format=3 uid="uid://d1c2b3a4e5f6"]

[ext_resource type="Script" path="res://scripts/human.gd" id="1_ghijk"]
[ext_resource type="Texture2D" uid="uid://c6g25npt406j7" path="res://icon.svg" id="2_lmnop"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_67890"]
radius = 58.0
height = 128.0

[sub_resource type="CircleShape2D" id="CircleShape2D_pqrst"]
radius = 150.0

[node name="Human" type="CharacterBody2D"]
collision_layer = 1
script = ExtResource("1_ghijk")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.5, 0.5, 1, 1)
texture = ExtResource("2_lmnop")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_67890")

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_pqrst")

[node name="DetectionRadiusVisual" type="Polygon2D" parent="."]
color = Color(0, 0, 1, 0.1)
polygon = PackedVector2Array()

[node name="WanderTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="timeout" from="WanderTimer" to="." method="_on_wander_timer_timeout"]
